# journal-cli

./: .gitignore  Cargo.toml  help.txt  journal.txt
journal/: 2023-10-10.txt  2023-10-11.txt  2023-10-12.txt  2023-10-13.txt  2023-10-14.txt  2023-10-16.txt
src/: app.rs  args_parse.rs  event.rs  fs_journal.rs  journal.rs  main.rs  tui.rs  ui.rs  update.rs
src/app/: journal.rs  level.rs  selectable_list.rs  tab.rs
src/app/tab/: dates_frame.rs  days_frame.rs
src/tui/: event.rs  event_listener.rs
src/ui/: layout.rs  styles.rs  widgets.rs
