[package]
name = "journals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.29"
ratatui = "0.24.0"
tokio = { version = "1.34.0", features = ["full"] }
