[package]
name = "journals"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
crossterm = { version = "0.27", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.24"
tokio = { version = "1", features = ["full"] }
